More commenting. Lift sidebar up a pixel to address a UI bug in Firefox where elements touching the bottom edge become the wrong color.

--- a/main.css
+++ b/main.css
@@ -387,7 +387,7 @@ Some more risque alternatives. ;)
 		position: fixed;
 		top: auto;
 		left: auto;
-		bottom: 20px;
+		bottom: 21px;
 		width: 248px !important;
 		margin: 0 !important;
 		z-index: 5;
@@ -789,7 +789,7 @@ Some more risque alternatives. ;)
 		position: absolute;
 		top: auto;
 		font-size: /*[[FontSize]]*/ !important;
-		bottom: 20px;
+		bottom: 21px;
 		right: 70px;
 		vertical-align: bottom;
 	}
@@ -1059,7 +1059,7 @@ Some more risque alternatives. ;)
 /*[[ChangeAlign]]*/
 		left: auto !important;
 		right: 2px !important;/**/
-		bottom: 0px;
+		bottom: 1px;
 		visibility: visible !important;
 		z-index: 2;
 	}
